--- a/frontend/src/views/location.css
+++ b/frontend/src/views/location.css
@@ -64,6 +64,7 @@ display: flex;
     font-size: 16px;
 }
 .review{
+    width: 90%;
     font-size: 16px;
 
 }
